<resources>

    //Login y Register
    <string name="app_name">E-Commerce</string>
    <string name="enter_mail">Digite E-mail</string>
    <string name="enter_pass">Digite Contraseña</string>
    <string name="enter_pass_confirm">Repite Contraseña</string>
    <string name="enter_full_name">Digite su Nombre Completo</string>
    <string name="enter_contact">Digite su Número de contacto</string>
    <string name="enter_username">Enter Username</string>

    //Login
    <string name="login">Iniciar Sesión</string>
    <string name="login_text">Inicia Sesión Ahora</string>

    //Register
    <string name="register">Registrar</string>
    <string name="register_text">Registrese ahora</string>
    <string name="forgot_pass">Olvidó la contraseña?</string>
    <string name="request_pass_reset">Resetea Contraseña</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="action_notifications">Notifications</string>

    <string name="action_cart">Shopping cart</string>

    //Menu
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_categories">Categorías</string>
    <string name="menu_products">Profuctos</string>
    <string name="menu_profile">Mi Peril</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <string name="android_version">Android</string>
    <string name="api_level">API Level</string>

    <string name="BLOB_URL_BASE">https://temaepeciale.blob.core.windows.net/temaepeciale/</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blancc">placeholder text</string>
    <string name="add_quant">+</string>
    <string name="rem_quant">-</string>
    <string name="add_to_cart">Agregar al carrito</string>


</resources>